--- a/src/Presentation/SmartStore.Web/Views/Boards/Forum.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Forum.Mobile.cshtml
@@ -24,7 +24,7 @@
                 @Model.Description</div>
         </div>
         <div class="actions">
-            <a href="@Url.Action("TopicCreate", new { id = @Model.Id })" class="newtopic" data-role="button">@T("Forum.NewTopic")</a>
+			<a href="@Url.Action("TopicCreate", new { id = @Model.Id })" rel="nofollow" class="newtopic" data-role="button">@T("Forum.NewTopic")</a>
         </div>
     </div>
     <div class="clear">
