--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -253,15 +253,15 @@
                             @(Model.ProductPrice.AvailableForPreOrder ? T("ShoppingCart.PreOrder") : T("ShoppingCart.AddToCart"))
                             <i class="fa fa-shopping-cart"></i>      
                         </a>
-                    }
-                    else
-                    {
-                        <a class="btn btn-primary add-to-cart-button" href="@Url.Action("AskQuestion", "Product", new RouteValueDictionary { { "id", Model.Id } })">
-                            <i class="fa fa-envelope"></i>
-                            @T("Products.CallForPrice.GoToForm")
-                        </a>
-                    }
-                }
+					}
+					else
+					{
+						<a class="btn btn-primary add-to-cart-button" rel="nofollow" href="@Url.Action("AskQuestion", "Product", new RouteValueDictionary { { "id", Model.Id } })">
+							<i class="fa fa-envelope"></i>
+							@T("Products.CallForPrice.GoToForm")
+						</a>
+					}
+				}
             </div>
         </div>
 
