--- a/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.Mobile.cshtml
@@ -1,4 +1,5 @@
 ﻿<div class="change-device">
-    <a data-ajax="false" href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = true }))">
-        @T("Mobile.ViewFullSite")</a>
+	<a data-ajax="false" href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = true }))" rel="nofollow">
+		@T("Mobile.ViewFullSite")
+	</a>
 </div>
