--- a/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Addresses.cshtml
@@ -19,10 +19,10 @@
     <div class="page-body">
 
         <div class="add-button">
-            <a class="btn btn-primary add-address-button" href="@Url.Action("AddressAdd")">
-                <i class="fa fa-plus"></i>&nbsp;
-                @T("Common.AddNew")
-            </a>
+			<a class="btn btn-primary add-address-button" href="@Url.Action("AddressAdd")" rel="nofollow">
+				<i class="fa fa-plus"></i>&nbsp;
+				@T("Common.AddNew")
+			</a>
         </div>
 
         <div class="address-list">
