--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.Mobile.cshtml
@@ -28,7 +28,7 @@
                                 <div class="item-box">
                                     <div class="address-item">
                                         <div class="select-button">
-                                            <a href="@Url.Action("SelectBillingAddress", new { addressId = item.Id })" data-role="button" data-ajax="false">@T("Checkout.BillToThisAddress")</a>
+											<a href="@Url.Action("SelectBillingAddress", new { addressId = item.Id })" data-role="button" data-ajax="false" rel="nofollow">@T("Checkout.BillToThisAddress")</a>
                                         </div>
                                         <div class="address-box">
                                             <div class="name">
