--- a/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.cshtml
@@ -1,4 +1,5 @@
 ﻿<div class="change-device">
-    <a class="btn btn-info" href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = false }))">
-        @T("Mobile.ViewMobileVersion")</a>
+	<a class="btn btn-info" href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = false }))" rel="nofollow">
+		@T("Mobile.ViewMobileVersion")
+	</a>
 </div>
