--- a/src/Presentation/SmartStore.Web/Views/Common/TaxTypeSelector.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/TaxTypeSelector.Mobile.cshtml
@@ -9,11 +9,13 @@
         </div>
         <ul data-role="listview" data-inset="true" data-filter="false">
             <li @(Model.CurrentTaxType == TaxDisplayType.IncludingTax ? " data-icon=false" : null)>
-                <a href="@Url.RouteUrl("ChangeTaxType", new { customertaxtype = ((int)TaxDisplayType.IncludingTax).ToString() })" data-ajax="false">
-                    @T("Tax.Inclusive")</a></li>
+				<a href="@Url.RouteUrl("ChangeTaxType", new { customertaxtype = ((int)TaxDisplayType.IncludingTax).ToString() })" data-ajax="false" rel="nofollow">
+					@T("Tax.Inclusive")
+				</a></li>
             <li @(Model.CurrentTaxType == TaxDisplayType.ExcludingTax ? " data-icon=false" : null)>
-                <a href="@Url.RouteUrl("ChangeTaxType", new { customertaxtype = ((int)TaxDisplayType.ExcludingTax).ToString() })" data-ajax="false">
-                    @T("Tax.Exclusive")</a></li>
+				<a href="@Url.RouteUrl("ChangeTaxType", new { customertaxtype = ((int)TaxDisplayType.ExcludingTax).ToString() })" data-ajax="false" rel="nofollow">
+					@T("Tax.Exclusive")
+				</a></li>
         </ul>
     </div>
 }
