--- a/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.Mobile.cshtml
@@ -27,7 +27,7 @@
                                     @Html.RouteLink(biss.ProductName, "Product", new { SeName = biss.SeName })
                                 </div>
                                 <div class="buttons">
-                                    <a href="@Url.Action("DeleteBackInStockSubscription", new { id = @biss.Id })" data-role="button">@T("Common.Delete")</a>
+									<a href="@Url.Action("DeleteBackInStockSubscription", new { id = @biss.Id })" data-role="button" rel="nofollow">@T("Common.Delete")</a>
                                 </div>
                             </div>
                         </li>
