--- a/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.Mobile.cshtml
@@ -19,7 +19,7 @@
                     <li>
                         <div class="item">
                             <div>
-                                @T("DownloadableProducts.Fields.Order"): <a class="link" href="@Url.Action("Details", "Order", new { id = item.OrderId })">@item.OrderId</a>
+                                @T("DownloadableProducts.Fields.Order"): <a class="link" href="@Url.Action("Details", "Order", new { id = item.OrderId })" rel="nofollow">@item.OrderId</a>
                             </div>
                             <div>
                                 @T("DownloadableProducts.Fields.Date"): @item.CreatedOn.ToString("d")
@@ -37,7 +37,7 @@
                                 @if (item.DownloadId > 0)
                                 {
                                     <div>
-                                        <a data-ajax="false" class="link" href="@Url.Action("GetDownload", "Download", new { id = item.OrderItemGuid })">@T("DownloadableProducts.Fields.Download")</a>
+										<a data-ajax="false" class="link" href="@Url.Action("GetDownload", "Download", new { id = item.OrderItemGuid })" rel="nofollow">@T("DownloadableProducts.Fields.Download")</a>
                                     </div>
                                 }
                                 else
@@ -49,7 +49,7 @@
                                 @if (item.LicenseId > 0)
                                 {
                                     <div>
-                                        <a class="link" href="@Url.Action("GetLicense", "Download", new { id = item.OrderItemGuid })">@T("DownloadableProducts.Fields.DownloadLicense")</a>
+										<a class="link" href="@Url.Action("GetLicense", "Download", new { id = item.OrderItemGuid })" rel="nofollow">@T("DownloadableProducts.Fields.DownloadLicense")</a>
                                     </div>
                                 }
                             </div>
