--- a/src/Presentation/SmartStore.Web/Views/Customer/ForumSubscriptions.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ForumSubscriptions.Mobile.cshtml
@@ -36,7 +36,7 @@
                                     }
                                 </div>
                                 <div class="buttons">
-                                    <a href="@Url.Action("DeleteForumSubscription", new { id = @fs.Id })" data-role="button">@T("Common.Delete")</a>
+									<a href="@Url.Action("DeleteForumSubscription", new { id = @fs.Id })" data-role="button" rel="nofollow">@T("Common.Delete")</a>
                                 </div>
                             </div>
                         </li>
