--- a/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.Mobile.cshtml
@@ -49,7 +49,7 @@
             <label for="agreement-agree">@T("DownloadableProducts.IAgree")</label>
         </div>
         <div>
-            <a id="continue-downloading" data-ajax="false" data-role="button" href="@Url.Action("GetDownload", "Download", new { id = Model.OrderItemGuid, agree = true })">@T("Common.Continue")</a>
+			<a id="continue-downloading" data-ajax="false" data-role="button" href="@Url.Action("GetDownload", "Download", new { id = Model.OrderItemGuid, agree = true })" rel="nofollow">@T("Common.Continue")</a>
         </div>
     </div>
 </div>
