--- a/src/Presentation/SmartStore.Web/Views/News/NewsItem.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/NewsItem.Mobile.cshtml
@@ -76,11 +76,11 @@
                                 <div class="comment-info">
                                     <div class="user-info">
                                         @if (comment.AllowViewingProfiles)
-                                        {
-                                            <a href="@Url.RouteUrl("CustomerProfile", new { id = comment.CustomerId })" class="username">@(comment.CustomerName)</a>
-                                        }
-                                        else
-                                        {
+										{
+											<a href="@Url.RouteUrl("CustomerProfile", new { id = comment.CustomerId })" class="username" rel="nofollow">@(comment.CustomerName)</a>
+										}
+										else
+										{
                                             <span class="username">@(comment.CustomerName)</span>
                                         }
                                     </div>
