--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
@@ -322,15 +322,15 @@
             </div>
                 }
 				@*Reorder support*@
-                if (Model.IsReOrderAllowed)
-                {
-            <a href="@Url.Action("ReOrder", new { id = Model.Id })" data-role="button">@T("Order.Reorder")</a>
-                }
-                if (Model.IsReturnRequestAllowed)
-                {
-            <a href="@Url.RouteUrl("ReturnRequest", new { orderId = Model.Id })" data-role="button">@T("Order.ReturnItems")</a>
-                }
-        }
+			if (Model.IsReOrderAllowed)
+			{
+				<a href="@Url.Action("ReOrder", new { id = Model.Id })" data-role="button" rel="nofollow">@T("Order.Reorder")</a>
+			}
+			if (Model.IsReturnRequestAllowed)
+			{
+				<a href="@Url.RouteUrl("ReturnRequest", new { orderId = Model.Id })" data-role="button" rel="nofollow">@T("Order.ReturnItems")</a>
+			}
+		}
         @Html.Widget("mobile_orderdetails_page_afterproducts")
         <div class="total-info">
             <table class="cart-total">
@@ -512,7 +512,7 @@
                                 }
                             </div>
                             <div>
-                                <a href="@Url.Action("ShipmentDetails", new { id = item.Id })">@T("Order.Shipments.ViewDetails")</a>
+								<a href="@Url.Action("ShipmentDetails", new { id = item.Id })" rel="nofollow">@T("Order.Shipments.ViewDetails")</a>
                             </div>
                         </div>
                     </li>
