--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Inbox.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Inbox.Mobile.cshtml
@@ -16,11 +16,11 @@
                         <div>
                             @T("PrivateMessages.Inbox.FromColumn"):
                             @if (pm.AllowViewingFromProfile)
-                           {
-                                <a href="@Url.RouteUrl("CustomerProfile", new { id = pm.FromCustomerId })">@(pm.CustomerFromName)</a>
-                           }
-                           else
-                           {
+							{
+								<a href="@Url.RouteUrl("CustomerProfile", new { id = pm.FromCustomerId })" rel="nofollow">@(pm.CustomerFromName)</a>
+							}
+							else
+							{
                                @pm.CustomerFromName
                            }
                         </div>
